--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "xmlhttprequest": "^1.8.0"
+    "matter-js": "^0.14.2",
+    "morgan": "~1.9.1"
   }
 }
